Fixing flickering + Updating margins.

--- a/assets/css/components/content.css
+++ b/assets/css/components/content.css
@@ -2,12 +2,17 @@
     color: var(--color-content-font);
 
     h1,
-    h2,
-    h3,
-    h4,
-    h5 {
+    h2 {
         color: var(--color-content-heading);
         margin: 2rem 0;
+    }
+
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: var(--color-content-heading);
+        margin: .2rem 0;
     }
 
     p {
